syntax = "proto3";

package protorender;

option go_package = "./protorender/item";

message Realisation {
    fixed32 id = 1;
    fixed32 item_id = 2;
    string created_at = 3;
}


message Item {
    fixed32 id = 1;
    string name = 2;
    string logo = 3;
    string description = 4;
    string user_email = 5;
    string created_at = 6;
    repeated Realisation realisations = 7;
}

message GetItemsRequest {
    fixed32 page = 1;
    fixed32 per_page = 2;
}

message CreateItemRequest {
    string name = 1;
    string logo = 2;
    string description = 3;
    string user_email = 4;
}

message UpdateItemRequest {
    fixed32 id = 1;
    string name = 2;
    string logo = 3;
    string description = 4;
}

message GetItemRequest {
    fixed32 id = 1;
}

message GetItemsResponse {
    repeated Item items = 1;
}

service ItemService {
    rpc GetItems (GetItemsRequest) returns (GetItemsResponse) {}
    rpc GetItemsStream (GetItemsRequest) returns (stream Item) {}
    rpc GetItem (GetItemRequest) returns (Item) {}
    rpc CreateItem (CreateItemRequest) returns (Item) {}
    rpc UpdateItem (UpdateItemRequest) returns (Item) {}
    rpc DeleteItem (GetItemRequest) returns (Item) {}
    rpc NewRealisation (GetItemRequest) returns (Realisation) {}
}